[project]
name = "helix"
version = "0.1.0"
description = "Qt Asyncio done right"
readme = "README.md"
authors = [
    { name = "rainzee", email = "rainzee.w@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.11.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "niquests>=3.18.7",
]
